# earnings2

./: .gitignore  ADDING_A_COMPANY.md  CLAUDE.md  VERIFY.md  pyproject.toml
data/: earnings2.db
earnings2/: __main__.py  cli.py  config.py  models.py  web.py
earnings2/db/: queries.py  schema.py
earnings2/parsers/: base.py  registry.py
earnings2/parsers/goldman_sachs/: parser.py  url_patterns.py
earnings2/parsers/jp_morgan/: parser.py  url_patterns.py
earnings2/parsers/morgan_stanley/: parser.py  table_maps.py  url_patterns.py
earnings2/pipeline/: discovery.py  extractor.py  fetcher.py  runner.py  validator.py  verifier.py
