[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "earnings2"
version = "0.1.0"
description = "Quarterly earnings parser system"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10",
    "httpx>=0.25",
    "click>=8.1",
    "flask>=3.0",
]

[tool.setuptools.packages.find]
include = ["earnings2*"]

[project.scripts]
earnings2 = "earnings2.cli:cli"
